cli: Replace add --check option (bz 1063471)
For fine grained enabling/disabling validation checks. Use this to
replace the heavy handed --force option.

--- a/man/virt-clone.pod
+++ b/man/virt-clone.pod
@@ -139,6 +139,10 @@ Show the help message and exit
 
 Show program's version number and exit
 
+=item B<--check>
+
+Enable or disable some validation checks. See L<virt-install(1)> for more details.
+
 =item B<-q>
 
 =item B<--quiet>
