Prep for release 1.2.1

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,14 @@
  Virtual Machine Manager News
  ============================
 
+Release 1.2.1 (June 06, 2015)
+-----------------------------
+- Bugfix release
+- Fix connecting to older libvirt versions (Michał Kępień)
+- Fix connecting to VM console with non-IP hostname (Giuseppe Scrivano)
+- Fix addhardware/create wizard errors when a nodedev disappears
+- Fix adding a second cdrom via customize dialog
+
 Release 1.2.0 (May 04, 2015)
 ----------------------------
 - OVMF/AAVMF Support (Laszlo Ersek, Giuseppe Scrivano, Cole Robinson)
