Switch translation infrastructure from transifex to zanata
I don't fully understand the reasoning but since the Red Hat translation
team is zanata-only at this point, it makes sense to switch. Also
libvirt already switched over:

https://www.redhat.com/archives/libvir-list/2015-March/msg00302.html

--- a/HACKING
+++ b/HACKING
@@ -58,7 +58,11 @@ format-patch output is fine too.
   Translations
   ============
 
-For translations, please sign up for transifex.com and contribute to the
-virt-manager project, see:
+Translations are handled at fedora.zanata.org. Please register for a Fedora
+account as described on the front page at:
 
-  https://www.transifex.com/projects/p/virt-manager/
+  https://fedora.zanata.org
+
+And contribute to virt-manager at:
+
+  https://fedora.zanata.org/project/view/virt-manager/
